# ask-cli

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  publish.yml  pyproject.toml
.github/workflows/: ci.yml
ask_cli/: __init__.py  cli.py  config.py
ask_cli/providers/: __init__.py  anthropic.py  ollama.py  openai_compat.py
tests/: test_cli.py
