[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ask-cli"
version = "0.1.0"
description = "AI terminal assistant — ask questions, generate shell commands, write code, all from your terminal"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "ask-cli contributors" }]
keywords = [
  "ai", "cli", "llm", "openai", "anthropic", "ollama",
  "terminal", "shell", "developer-tools", "gpt",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Utilities",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "click>=8.0",
  "rich>=13.0",
]

[project.optional-dependencies]
openai   = ["openai>=1.0"]
anthropic = ["anthropic>=0.25"]
groq     = ["groq>=0.4"]
all      = ["openai>=1.0", "anthropic>=0.25", "groq>=0.4"]
dev      = [
  "pytest>=7.0",
  "pytest-cov",
  "ruff",
  "mypy",
  "build",
  "twine",
]

[project.scripts]
ask = "ask_cli.cli:main"

[project.urls]
Homepage    = "https://github.com/andrejkoza1-afk/ask-cli"
Repository  = "https://github.com/andrejkoza1-afk/ask-cli"
Issues      = "https://github.com/andrejkoza1-afk/ask-cli/issues"
Changelog   = "https://github.com/andrejkoza1-afk/ask-cli/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["ask_cli"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
